--- a/SisMaper/Views/ViewPedido.xaml
+++ b/SisMaper/Views/ViewPedido.xaml
@@ -460,6 +460,13 @@
                                 Culture="pt-BR"
                                 IsReadOnly="True" />
                             <DataGridTextColumn
+                                HeaderStyle="{StaticResource SisMaper.DataGrid.HeaderStyle.Right}"
+                                Width="35*"
+                                MinWidth="110"
+                                Header="Identificação"
+                                Binding="{Binding Produto.CodigoInterno}"
+                                IsReadOnly="True" />
+                            <DataGridTextColumn
                                 Width="18*"
                                 MinWidth="50"
                                 Header="Un"
