--- a/SisMaper/Views/ViewProdutos.xaml
+++ b/SisMaper/Views/ViewProdutos.xaml
@@ -171,6 +171,11 @@
                     <DataGrid.Columns>
                         <DataGridTextColumn
                             Width="40*"
+                            Header="Identificação"
+                            Binding="{Binding CodigoInterno}"
+                            IsReadOnly="True" />
+                        <DataGridTextColumn
+                            Width="40*"
                             Header="Código de Barras"
                             Binding="{Binding CodigoBarras}"
                             IsReadOnly="True" />
