--- a/SisMaper/Help/HTML/css/hnd.content.css
+++ b/SisMaper/Help/HTML/css/hnd.content.css
@@ -94,15 +94,16 @@ a.rvts16, span.rvts16
 span.rvts17
 {
  font-size: 12pt;
+ font-weight: bold;
 }
 span.rvts18
 {
  font-size: 12pt;
- font-weight: bold;
 }
 a.rvts19, span.rvts19
 {
  font-size: 12pt;
+ font-weight: bold;
  color: #0000ff;
  text-decoration: underline;
 }
@@ -110,7 +111,13 @@ span.rvts20
 {
  font-weight: bold;
 }
-span.rvts21
+a.rvts21, span.rvts21
+{
+ font-size: 12pt;
+ color: #0000ff;
+ text-decoration: underline;
+}
+span.rvts22
 {
  font-size: 12pt;
  text-decoration: underline;
@@ -151,27 +158,84 @@ p,ul,ol /* Paragraph Style */
 }
 .rvps6
 {
- text-indent: 48px;
+ text-align: center;
+ line-height: 1.50;
 }
 .rvps7
 {
- text-align: center;
+ text-align: justify;
+ text-justify: inter-word;
+ text-align-last: auto;
  line-height: 1.50;
 }
 .rvps8
 {
+ line-height: 2.00;
+}
+.rvps9
+{
+ text-align: justify;
+ text-justify: inter-word;
+ text-align-last: auto;
+ line-height: 2.00;
+}
+.rvps10
+{
+ text-align: justify;
+ text-justify: inter-word;
+ text-align-last: auto;
  text-indent: 48px;
  line-height: 1.50;
 }
-.rvps9
+.rvps11
+{
+ text-align: justify;
+ text-justify: inter-word;
+ text-align-last: auto;
+ text-indent: 48px;
+ line-height: 2.00;
+}
+.rvps12
+{
+ text-indent: 48px;
+}
+.rvps13
+{
+ text-align: center;
+ line-height: 2.00;
+}
+.rvps14
+{
+ text-align: justify;
+ text-justify: inter-word;
+ text-align-last: auto;
+}
+.rvps15
+{
+ text-align: center;
+ text-indent: 48px;
+ line-height: 1.50;
+}
+.rvps16
+{
+ text-indent: 48px;
+ line-height: 2.00;
+}
+.rvps17
+{
+ text-indent: 48px;
+ line-height: 1.50;
+}
+.rvps18
 {
  text-indent: 48px;
  line-height: 1.50;
  margin: 0px 0px 0px 48px;
 }
-.rvps10
+.rvps19
 {
  text-indent: -24px;
+ line-height: 1.50;
  margin: 0px 0px 0px 48px;
 }
 /* ========== Lists ========== */
