--- a/SisMaper/Views/ViewSelecionarFatura.xaml
+++ b/SisMaper/Views/ViewSelecionarFatura.xaml
@@ -77,21 +77,19 @@
         </Border>
         <Button
             Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
-            Content="Selecionar"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Command="{Binding SelecionarCmd}"
-            Margin="0,0,10,10"
-            Height="30"
-            Width="92" />
-        <Button
-            Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Cancelar"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Command="{Binding CancelarCmd}"
-            Margin="0,0,112,10"
-            Height="30"
-            Width="81" />
+            Margin="0,0,10,10"
+            Height="30"/>
+        <Button
+            Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
+            Content="Selecionar"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Command="{Binding SelecionarCmd}"
+            Margin="0,0,95,10"
+            Height="30" />
     </Grid>
 </mah:MetroWindow>
