--- a/SisMaper/Views/ViewRecebimentos.xaml
+++ b/SisMaper/Views/ViewRecebimentos.xaml
@@ -10,8 +10,7 @@
     xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
     x:Name="userControl"   
     xmlns:viewModels="clr-namespace:SisMaper.ViewModel"
-    xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-    Dialog:DialogParticipation.Register="{Binding}"
+    templates:DialogParticipation.MyRegister="{Binding}"
     mc:Ignorable="d"
     Height="500" Width="1000">
 
