--- a/SisMaper/Views/ViewPedido.xaml
+++ b/SisMaper/Views/ViewPedido.xaml
@@ -264,7 +264,8 @@
             mah:HeaderedControlHelper.HeaderFontSize="18">
             <TabItem
                 Header="  Itens  "
-                mah:HeaderedControlHelper.HeaderBackground="Black">
+                mah:HeaderedControlHelper.HeaderBackground="Black"
+                templates:HelperPopupToolTip.HelpHeader="Guia de Itens do Pedido">
                 <DockPanel
                     Margin="0">
                     <Grid
@@ -358,7 +359,9 @@
                             mah:TextBoxHelper.AutoWatermark="True"
                             InputScope="Number"
                             Text="{Binding QuantidadeItem, UpdateSourceTrigger=PropertyChanged}"
-                            RenderTransformOrigin="0.379,0.595">
+                            RenderTransformOrigin="0.379,0.595"
+                            templates:HelperPopupToolTip.HelpHeader="Quantidade"
+                            templates:HelperPopupToolTip.HelpContent="Digite a quantidade desejada.&#xA;&#xA;Em caso de produtos de venda não fracionada, será permitido apenas unidades inteiras.">
                             <i:Interaction.Triggers>
                                 <i:EventTrigger
                                     EventName="TextChanged">
@@ -381,6 +384,7 @@
                             Command="{Binding AddItemCmd}"
                             CommandParameter="{Binding ''}"
                             Margin="0,10,10,0"
+                            
                             templates:HelperPopupToolTip.HelpHeader="Adicionar Item ao Pedido"
                             templates:HelperPopupToolTip.HelpContent="Adicionar um novo Item contendo o Produto e a Quantidade escolhida.&#xA;&#xA;Também é possível adicionar o item pressionando [ENTER] nos campos Quantidade e Buscar Produto"/>
                     </Grid>
@@ -542,7 +546,8 @@
             <TabItem
                 Visibility="{Binding HasFatura, Converter={StaticResource BooleanToVisibilityConverter}}"
                 IsSelected="{Binding FaturaTabItemIsSelected}"
-                Header="  Financeiro  ">
+                Header="  Financeiro  "
+                templates:HelperPopupToolTip.HelpHeader="Guia da Fatura do Pedido">
                 <Grid>
                     <TextBlock
                         HorizontalAlignment="Left"
@@ -724,7 +729,8 @@
             <TabItem
                 Visibility="{Binding HasNotaFiscal, Converter={StaticResource BooleanToVisibilityConverter}}"
                 IsSelected="{Binding NotaFiscalTabItemIsSelected}"
-                Header="  Nota Fiscal  ">
+                Header="  Nota Fiscal  "
+                templates:HelperPopupToolTip.HelpHeader="Guia das Notas Fiscais do Pedido">
                 <Grid>
                     <DataGrid
                         x:Name="DataGridNotasFiscais"
@@ -826,6 +832,7 @@
             Margin="20,0,0,20"
             Width="77"
             templates:HelperPopupToolTip.HelpHeader="Faturar"
+            templates:HelperPopupToolTip.HelpLink="ComoFaturarumPedido"
             templates:HelperPopupToolTip.HelpContent="Abrir o menu para Faturação do Pedido.&#xA;&#xA;Após faturado, o Pedido é automaticamente salvo." />
         <Button
             Content="Emitir Nota Fiscal"
@@ -837,6 +844,7 @@
             Command="{Binding EmitirNotaFiscalContextMenuCmd}"
             CommandParameter="{Binding RelativeSource={RelativeSource Mode=Self}}"
             templates:HelperPopupToolTip.HelpHeader="Emitir de Nota Fiscal"
+            templates:HelperPopupToolTip.HelpLink="ComoEmitirumaNotaFiscal"
             templates:HelperPopupToolTip.HelpContent="Realizar a Emissão da Nota Fiscal do Pedido.">
             <Button.ContextMenu>
                 <ContextMenu
@@ -877,14 +885,17 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Command="{Binding SalvarCmd}"
-            Margin="0,0,104,20" />
+            Margin="0,0,104,20"
+            templates:HelperPopupToolTip.HelpHeader="Salvar e fechar o Pedido"
+            />
         <Button
             Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Cancelar"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Command="{Binding CancelarCmd}"
-            Margin="0,0,20,20" />
+            Margin="0,0,20,20" 
+            templates:HelperPopupToolTip.HelpHeader="Descarta todas as alterações feitas no pedido"/>
 
 
     </Grid>
